2007-08-04  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/SequenceableCollection.st (replaceFrom:with:): fixed stop index

	* st/kernel/Interval.st (at:): added
	(size): added
	(start, stop, step): added accessors
	(reverse): added

	* st/kernel/Number.st (to:by:do:): support for negative steps
	(to:by:reverseDo:): removed

	* st/kernel/SequenceableCollection.st (from:to:by:keysAndValuesDo:): added
	(from:to:by:do:): added

	* st/kernel/Collection.st (copyClass): added
	(collectClass): added

	* SConstruct: add the examples directory to the source distribution

2007-08-03  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-primitives.c (Object_perform): fixed arguments
	(Object_performWithArguments): fixed too

	* st/kernel/Compiler.st (symbolToken): fixed binary symbol parsing
	(parseArray): added

	* st/kernel/Number.st (readFrom:): fixed parsing

	* st/kernel/Interval.st: added

	* syx/syx-init.c (syx_build_basic): send #initializeFirstSystem instead of #initialize

	* st/kernel/ArrayedCollection.st (copyWithout:): added refinement
	
	* st/kernel/Collection.st (copyWithout:): added

	* st/kernel/SequenceableCollection.st (copyReplaceAll:with:): added
	(matchSubcollection:startingAt:): added
	(copyReplaceFrom:to:with:): added
	(copyReplaceFrom:to:withObject:): added
	(copyReplacing:withObject:): added

2007-08-02  Luca Bruno  <lethalman88@gmail.com>

	* st/kernel/TextCollector.st: use #perform:with: to send message to the proxy

	* st/kernel/Behavior.st (initializeSubclassOf): create a method dictionary

	* syx/syx-object.c (syx_metaclass_new): create a method dictionary
	(syx_class_new): create a method dictionary

	* st/kernel/Object.st (respondsTo:): added
	(perform:): added
	(perform:with:): added
	(perform:with:with:): added
	(perform:with:with:with): added
	(perform:withArguments): added

	* st/kernel/Behavior.st (doesUnderstand:): added

	* st/kernel/Dictionary.st (includesKey:): added

	* st/kernel/Set.st: added rehashing methods